# buy_vs_rent_calculator

./: README.md  TODO.md  calculator.py  example.py  find_rent_price_intersection.py  pyproject.toml  stampduty.py
