[tool.poetry]
name = "buyvsrent"
version = "0.1.0"
description = ""
authors = ["John Pulford <johnpulford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

